--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,6 @@
-<h1>Scholarify</h1>
-<p>Welcome to Scholarify.</p>
+<div class="row">
+	<div class="card">
+		<h1 class="well">Scholarify</h1>
+		<p>Welcome to Scholarify.</p>
+	</div>
+</div>
