--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -39,6 +39,15 @@
     </div>
   </div>
 
+   <div class="row">
+    <div class="two columns">
+      <p> Provider </p>
+    </div>
+    <div class="ten columns">
+      <%= f.text_field :uid %>
+    </div>
+  </div>
+
   <div class="row">
     <div class="two columns">
       <p> Image </p>
