--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -41,7 +41,7 @@
 
    <div class="row">
     <div class="two columns">
-      <p> Provider </p>
+      <p> uid </p>
     </div>
     <div class="ten columns">
       <%= f.text_field :uid %>
