--- a/app/views/courses/_materials_tab.html.erb
+++ b/app/views/courses/_materials_tab.html.erb
@@ -1,5 +1,23 @@
 <div class="tab-pane" id="lB">
 
-	<p>Test</p>
+<h4><small><%= @course.title %></small></h4>
+<h2>Study Materials</h2>
+<hr>
+
+	<div class="three columns">
+		<h5>Resources</h5>
+		<ul>
+			<li><p>Material Title</p></li>
+		</ul>
+	</div>
+
+	<div class="nine columns">
+		<div class="well">
+			<%= @course.material.html_safe %>
+
+			<hr>
+
+		</div>
+	</div>
 
 </div>
