added review-, assignment-, questions

--- a/app/views/courses/_backend_form.html.erb
+++ b/app/views/courses/_backend_form.html.erb
@@ -12,6 +12,8 @@
     	</div>
   	<% end %>
 
+<div style="min-height:500px;">
+
 	<h2>Edit Apprenticeship Content</h2>
 
 	<ul class="nav nav-tabs">
@@ -24,12 +26,15 @@
 	</ul>
 
 	<div class="tab-content">
-		<div class="tab-pane active" id="challenge_info_backend_tab">		<%= render "challenge_info_backend_tab"%>		</div>
-		<div class="tab-pane" 		 id="challenge_session_backend_tab">	<%= render "challenge_session_backend_tab"%>	</div>
-		<div class="tab-pane" 		 id="challenge_submission_backend_tab">	<%= render "challenge_submission_backend_tab"%>	</div>
-		<div class="tab-pane" 		 id="materials_backend_tab">			<%= render "materials_backend_tab"%>			</div>
-		<div class="tab-pane" 		 id="review_backend_tab">   			<%= render "review_backend_tab"%>   			</div>
-		<div class="tab-pane" 		 id="questions_backend_tab">			<%= render "questions_backend_tab"%>			</div>
+		<div class="tab-pane active" id="challenge_info_backend_tab">		<%= render "challenge_info_backend_tab" %>		 </div>
+		<div class="tab-pane" 		 id="challenge_session_backend_tab">	<%= render "challenge_session_backend_tab" %>	 </div>
+		<div class="tab-pane" 		 id="challenge_submission_backend_tab">	<%= render "challenge_submission_backend_tab" %> </div>
+		<div class="tab-pane" 		 id="materials_backend_tab">			<%= render "materials_backend_tab" %>			 </div>
+		<div class="tab-pane" 		 id="review_backend_tab">   			<%= render "review_backend_tab" %>   			 </div>
+		<div class="tab-pane" 		 id="questions_backend_tab">			<%= render "questions_backend_tab" %>			 </div>
 	</div>
 
+</div>
+
 <% end %>
+
