--- a/app/views/courses/_challenge_submission_backend_tab.html.erb
+++ b/app/views/courses/_challenge_submission_backend_tab.html.erb
@@ -1,9 +1,23 @@
 <%= form_for(@course) do |f| %>
 
-	<p>FORM BUILDER</p>
+	<% if @course.errors.any? %>
+    <div id="error_explanation">
+      <h2><%= pluralize(@course.errors.count, "error") %> prohibited this course from being saved:</h2>
+      <ul>
+      <% @course.errors.full_messages.each do |msg| %>
+        <li><%= msg %></li>
+      <% end %>
+      </ul>
+    </div>
+	<% end %>
+
+	<%= f.fields_for :assignment_tasks do |builder| %>
+		<%= render 'assignment_task_fields', :f => builder %>
+	<% end %>
+	<p><%= link_to_add_fields "Add Assignment Task", f, :assignment_tasks %></p>
 
 	<hr style="border: solid #fff;">
-	  
+
 	<div class="actions">
 		<div class="well well-large"><%= f.submit :class => "btn btn-large btn-block btn-success" %></div>
 	</div>
