--- a/app/views/courses/new.html.erb
+++ b/app/views/courses/new.html.erb
@@ -6,7 +6,9 @@
 
 			<%= render 'backend_form' %>
 
-			<%= link_to 'Our Courses', courses_path %>
+			<div class="form-actions">
+				<%= link_to 'All Courses', courses_path, :class => 'btn', :style => "float:right;" %>
+			</div>
 
 		</div>
 	</div>
