--- a/app/views/courses/_forums_tab.html.erb
+++ b/app/views/courses/_forums_tab.html.erb
@@ -1,5 +1,25 @@
 <div class="tab-pane" id="lE">
 
-	<p>Forums</p>
+	<h2>Forum</h2>
+	<hr>
+
+	<table>
+		<tr>
+			<th width="60%">Topic Title</th>
+			<th width="10%">Replies</th>
+			<th width="30%">Last Post</th>
+		</tr>
+		<% for topic in @course.topics %>
+			<tr>
+				<td><%= link_to h(topic.title), topic_path(topic.id) %>
+
+				</td>
+			</tr>
+		<% end %>
+	</table>
+
+	<p>
+		<%= link_to "New Topic", '/topics/new?=#{@course.id}' %>
+	</p>
 
 </div>
