--- a/app/views/courses/_question_fields.html.erb
+++ b/app/views/courses/_question_fields.html.erb
@@ -1,9 +1,11 @@
-<p>
-	<%= f.label :content, "Question" %> <br />
-	<%= f.text_area :content, :rows => 3 %> <br />
-	<%= f.hidden_field :_destroy %>
-	<%= link_to_remove_fields "remove", f %>
-</p>
+<div class="row">
+	<div class="twelve columns">
+		<%= f.label :content, "Question" %> <br />
+		<%= f.text_area :content, :rows => 3, :style => "width: 100%;" %> <br />
+		<%= f.hidden_field :_destroy %>
+		<%= link_to_remove_fields "remove", f %>
+	</div>
+</div>
 
 <%= f.fields_for :answers do |builder| %>
 	<%= render 'answer_fields', :f => builder %>
