--- a/app/views/courses/_review_question_fields.html.erb
+++ b/app/views/courses/_review_question_fields.html.erb
@@ -1,6 +1,6 @@
 <p>
 	<%= f.label :content, "Question" %> <br />
-	<%= f.text_area :content, :rows => 3 %> <br />
+	<%= f.text_area :content, :rows => 3, :style => "width: 100%;" %> <br />
 	<%= f.hidden_field :_destroy %>
 	<%= link_to_remove_fields "remove", f %>
 </p>
