--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -15,6 +15,13 @@
 
 			<hr>
 
+			<h4>Comments</h4>
+
+			<p>
+				<%= render "comments/comments" %>
+				<%= render "comments/form" %>
+			</p>
+
 		</div>
 	</div>
 </div>
