fixed course id bug in topics/new

--- a/app/views/courses/_forums_tab.html.erb
+++ b/app/views/courses/_forums_tab.html.erb
@@ -19,7 +19,7 @@
 	</table>
 
 	<p>
-		<%= link_to "New Topic", '/topics/new?=#{@course.id}' %>
+		<%= link_to "New Topic", "/topics/new?course=#{@course.id}" %>
 	</p>
 
 </div>
