--- a/app/views/layouts/_navi.html.erb
+++ b/app/views/layouts/_navi.html.erb
@@ -5,16 +5,28 @@
 		<% logo = image_tag("logosmall.png", alt: "Scholarify | Online Apprenticeships") %>
 		<%= link_to logo, root_path, :style => "margin-top:7px;padding-top:5px;" %>
 
-		<div style="float:right">
-			<div class="btn-group">
-				<div class="btn">
-					Sign up
-				</div>
-				<div class="btn">
-					<%= link_to 'All Courses', courses_path %>
-				</div>
+		<div class="btn-group" style="float:right;">
+			
+				<button class="btn">
+					<% if current_user %>
+						<%= current_user.name %>
+					<% else %>
+						<a href="#myModal" role"button" data-toggle="modal">Login</a>
+					<% end %>
 
-			</div>
+				</button>
+
+				<button class="btn dropdown-toggle" data-toggle="dropdown">
+					<span class="caret"></span>
+				</button>
+
+					<ul class="dropdown-menu">
+						<li><%= link_to "My Courses", main_app.courses_path %></li>
+
+						<hr style="margin:0px;">
+						<li><%= link_to "Sign out", main_app.signout_path %></li>
+
+					</ul>	
 		</div>
 	</div>
 </div>
