--- a/app/views/enrollments/index.html.erb
+++ b/app/views/enrollments/index.html.erb
@@ -5,17 +5,13 @@
 			<h2>All Participants</h2>
 			<hr>
 
-			<% @enrollments.each do |user| %>
+			<% @enrollments.each do |enrollment| %>
 
 				<div class="well">
 
 					<h4>User: <%= enrollment.user_id %></h4>
 
 					<p>Course: <%= enrollment.course_id %></p>
-
-					<p style="float:right;">
-						<%= link_to "Destroy", topic, :confirm => "Are you sure?", :method => :delete %>
-					</p>
 
 				</div>
 
