--- a/app/views/enrollments/index.html.erb
+++ b/app/views/enrollments/index.html.erb
@@ -9,10 +9,8 @@
 
 				<div class="well">
 
-					<h4>User: <%= enrollment.user_id %></h4>
-
-					<p>Course: <%= enrollment.course_id %></p>
-
+					<p>Test</p>
+					
 				</div>
 
 			<% end %>
