change enrollment index

--- a/app/views/enrollments/index.html.erb
+++ b/app/views/enrollments/index.html.erb
@@ -9,7 +9,8 @@
 
 				<div class="well">
 
-					<p>Test</p>
+					<p>User: <%= enrollment.user_id %></p>
+					<p>Course: <%= enrollment.course_id %></p>
 					
 				</div>
 
