--- a/app/views/courses/_assignmenttask_fields.html.erb
+++ b/app/views/courses/_assignmenttask_fields.html.erb
@@ -1,6 +1,9 @@
+<h4>Assignment Task</h4>
 <p>
-	<%= f.label :content, "Assignment Task" %> <br />
+	<%= f.label :title, "Title" %> <%= f.text_field :title %> <br />
+	<%= f.label :content, "Description" %> 
 	<%= f.text_area :content, :rows => 3, :style => "width: 100%;" %> <br />
 	<%= f.hidden_field :_destroy %>
 	<%= link_to_remove_fields "remove", f %>
 </p>
+<hr>
