--- a/app/views/submissions/index.html.erb
+++ b/app/views/submissions/index.html.erb
@@ -7,6 +7,7 @@
 	  <% @submissions.each do |submission| %>
 	    
 	      <p><%= submission.content %></p>
+	      <p><%= @submission.user_id %></p>
 	    
 	  <% end %>
 	  <%= link_to "New Submission", [:new, @submittable, :submission], :class =>"btn" %>
