--- a/app/views/submissions/_form.html.erb
+++ b/app/views/submissions/_form.html.erb
@@ -10,19 +10,22 @@
     </div>
   <% end %>
 
-<div class="row">
-	<div class="three columns">
-		<h5>Github URL:</h5>
-	</div>
-	<div class="nine columns">
-		<%= f.text_field :content %>
-	</div>
-</div>
+  <% @submissionitems.each do |item| %>
+    <div class="well">
+      <h4><%= item.title %></h4>
+      <p><%= item.description %></p>
 
-<hr>
+      <input id="submission_submissionitems_attributes_<%= item.assignmenttask_id %>_input" name="submission[submissionitems_attributes][<%= item.assignmenttask_id %>][input]" size="30" type="text" />
 
-<div class="actions">
-	<%= f.submit :class =>"btn btn-success" %>
-</div>
+      <hr>
+    </div>
+  <% end %>
+   
+  <hr style="border: solid #fff;">
 
+  <div class="actions">
+      <div class="well well-large"><%= f.submit :class => "btn btn-large btn-block btn-success" %></div>
+  </div>
+ 
 <% end %>
+
